--- a/TOTO Track/www/css/grayscale.css
+++ b/TOTO Track/www/css/grayscale.css
@@ -8,8 +8,10 @@ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
-    background-color: #000;
+    /*color: #fff;*/
+    /*background-color: #000;*/
+    color: black;
+    background-color: white;
 }
 
 html {
@@ -146,9 +148,11 @@ a:focus {
     height: auto;
     padding: 100px 0;
     text-align: center;
-    color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
-    background-color: #000;
+    color: black;
+    /*color: #fff;*/
+    background-color: #fff;
+    /*background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;*/
+    /*background-color: #000;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
